workspace-sf/force-app/main/default/objects/RemuneracaoCanal__c/RemuneracaoCanal__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre o canal e o tipo de remuneração</description>
    <label>Remuneração do produto do canal</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remunerações dos produtos canal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>