workspace-sf/force-app/main/default/objects/RemuneracaoCanal__c/fields/LimiteMinimo__c.field-meta.xml
<CustomField>
    <fullName>LimiteMinimo__c</fullName>
    <label>Limite mínimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>