workspace-sf/force-app/main/default/objects/RemuneracaoCanal__c/fields/ObrigatorioNotaFiscalPagamento__c.field-meta.xml
<CustomField>
    <fullName>ObrigatorioNotaFiscalPagamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obrigatório nota fiscal para pagamento?</label>
    <type>Checkbox</type>
</CustomField>