workspace-sf/force-app/main/default/objects/RemuneracaoCanal__c/fields/ProdutoCanal__c.field-meta.xml
<CustomField>
    <fullName>ProdutoCanal__c</fullName>
    <label>Produto do canal</label>
    <referenceTo>ProdutoCanal__c</referenceTo>
    <relationshipLabel>Remunerações dos produtos canal</relationshipLabel>
    <relationshipName>RemuneracoesProdutoCanal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>