workspace-sf/force-app/main/default/objects/RemuneracaoCanal__c/validationRules/ValidarLimiteMaximoMinimo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMaximoMinimo</fullName>
    <active>true</active>
    <errorConditionFormula>LimiteMaximo__c &lt;  LimiteMinimo__c</errorConditionFormula>
    <errorMessage>Limite mínimo ou máximo inválido. O limite mínimo deve sempre ser menor que o  limite máximo</errorMessage>
</ValidationRule>